--- a/client/src/components/CSS/Detail.module.css
+++ b/client/src/components/CSS/Detail.module.css
@@ -1,14 +1,14 @@
 .detail {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  margin: 2rem auto;
+  gap: 1vh;
+  margin: 1.5vh auto;
   width: 100%;
   background-color: #29035121;
   background-blend-mode: lighten;
   background-size: cover;
   background-position: center;
-  border-radius: 12px;
+  border-radius: 1vh;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -29,79 +29,66 @@
 
 .grupo3 {
   display: flex;
-  width: 96%;
-
+  flex-direction: column;
+  align-items: start;
   justify-content: center;
+  margin-top: -1vh;
+  margin-left: 5vh;
+ 
 }
 .description {
   border: 2px solid rgb(111, 0, 255);
-  padding: 2rem;
+  padding-right: 3vh;
+  padding-left: 3vh;
   background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36ab62);
   border-radius: 40px;
-  font-size: 1rem;
-  line-height: 1.6;
+  height: 76vh;
+  font-size: 1.5vh;
   color: #cecece;
+  width: 50vh;
+  margin-top: 1vh;
 }
 
-.extraData p {
-  margin: 0.5rem 0;
-}
 
 .tiendas {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   border: 2px solid rgb(111, 0, 255);
-  width: 70%;
+  width: 80%;
   align-items: center;
   background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36abaf);
-  border-radius: 8px;
-  padding: 1rem;
+  border-radius: 10vh;
+  padding: 1.6vh;
+  padding-left: 3vh;
+  padding-right: 3vh;
   margin: auto;
-  font-size: 1.1rem;
+  height: 3vh;
   font-weight: bold;
   color: #ffffff;
-  font-size: 1.6rem;
+  font-size: 2vh;
+  
 
-  margin-top: 1rem;
-  max-height: 10px;
 }
 
-.tiendas ul {
-  list-style: none;
-  padding: 0;
-}
-
-.tiendas li {
-  margin-bottom: 0.5rem;
-}
 
 .tiendas a {
   color: #01c6fc;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 2vh;
 }
 
 .tiendas a:hover {
-  text-decoration: underline;
+  text-decoration:underline;
 }
 
-/* Estilos para el enlace "Volver" */
-.backLink {
-  margin-top: 1rem;
-  color: #cecece;
-  text-decoration: none;
-  font-weight: bold;
-}
 
-.backLink:hover {
-  text-decoration: underline;
-}
 
 .grupo2 {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: start;
+  justify-content: center;
 
   width: 90%;
   margin: auto;
@@ -115,10 +102,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 4rem;
-  margin-top: 0rem;
-  width: 600px;
-  height: 450px ;
+  width: 70vh;
+  height: 50vh;
   background-image: linear-gradient(-90deg, #272d9dc0, #000000, #7a36abaf);
   border-radius: 60px;
   border: 2px solid rgb(111, 0, 255);
@@ -126,44 +111,50 @@
 
 .grupoIntermedio {
   display: flex;
-  flex-direction: row;
-  justify-content: start;
+  flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
 
 .parrafos {
   display: flex;
   flex-direction: row;
-
+  justify-content: space-between;
+  padding-left: 3vh;
+  padding-right: 3vh;
   background-image: linear-gradient(90deg, #0a0e5fc0, #000000, #3e0c61af);
   border-radius: 50px;
-  margin-top: 0.10rem;
-  width: 600px;
-  height: 450px ;
+  
+  width: 63vh;
+  height: 24vh ;
   border: 2px solid rgb(111, 0, 255);
 }
 .dataParrafos {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  width: 200px;
-
-  max-height: 400px;
-}
-.dataParrafos div {
-  
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-size: 1.4vh;
+  margin-top: 0.1vh;
   
 }
+.dataParrafos h3{
+  padding: 0;
+  margin-top: 1vh;
+  margin-bottom: 0.3vh;
+}
+
+.dataParrafos p {
+  padding: 0;
+  margin: 0;
+}
+
+
+
 
 .id {
   margin: 0 auto;
+  margin-bottom: 1vh;
   color: rgb(255, 179, 0);
+  font-size: 1.5vh;
 }
 
 .nombre {
@@ -171,13 +162,8 @@
   padding: 1rem;
   padding-bottom: 1.5rem;
   border-radius: 200px;
-  font-size: 2rem;
+  font-size: 2vh;
   margin: 0 auto;
   color: rgb(253, 251, 249);
 }
 
-.parrafosPGrupo2{
-  padding: 0rem;
-  color: rgb(255, 179, 0);
-  gap: 0;
-}
